--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,5 @@
 <h1>Articles#index</h1>
 
-<%= notice %>
-
 <% @articles.each do |article| %>
   <div>
     <%= link_to article.title, article %>
@@ -9,3 +7,4 @@
 <% end %>
 
 <%= link_to "New Article", new_article_path %>
+<%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete } %>
