--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,5 +6,7 @@
   </div>
 <% end %>
 
-<%= link_to "New Article", new_article_path %>
+<% if policy(:article).new? %>
+  <%= link_to "New Article", new_article_path %>
+<% end %>
 <%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete } %>
